--- a/Pla3parte3/HomePla3_3_3.html
+++ b/Pla3parte3/HomePla3_3_3.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <script>var numero=prompt("¿Hasta que número quieres hacer la media?")</script>
-<script>var resultado = valores(numero)</script>
+<script>var resultado = mediaAritmetica(numero)</script>
 </body>
 </html>
