--- a/Pla3parte3/HomePla3_3_5.html
+++ b/Pla3parte3/HomePla3_3_5.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>var cadena=prompt("inserta cadena de A´s Y B´s: ")</script>
-<script>var resultado = valores(cadena)</script>
+<script>var resultado = abcde(cadena)</script>
 <script>;</script>
 </body>
 </html>
