--- a/HomeMenu.html
+++ b/HomeMenu.html
@@ -5,47 +5,103 @@
 <title>Insert title here</title>
 </head>
 <body>
+
+<br>
+
+
+<h2 style=" BORDER: black 2px groove; FONT-SIZE: 15pt;background-color:SlateBlue; COLOR: white">EJERCICIOS PLA-3 1º PARTE</h2>
+<h2 style="BORDER: 4px groove ;background-color: LightGray; background-size: 50px 50px; COLOR: white"/h2>
+
+<br>
+
+<input onClick=location="Pla3parte1/HomePla3_1_1.html" type="button" value="EJERCICIO 1" name="boton1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240) ">
+
+<input onClick=location="Pla3parte1/HomePla3_1_2.html" type="button" value="EJERCICIO 2" name="boton2"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte1/HomePla3_1_3.html" type="button" value="EJERCICIO 3" name="boton3"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte1/HomePla3_1_4.html" type="button" value="EJERCICIO 4" name="boton4"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
 <br>
 <br>
-<br>
-Ejercicios realizados en la primera parte de la PLA3 
-<br>
-<br>
-<br>
-<button  onclick=location="Pla3parte1/HomePla3_1_1.html">EJERCICIO1</button>
-<button  onclick=location="Pla3parte1/HomePla3_1_2.html">EJERCICIO 2</button>
-<button  onclick=location="Pla3parte1/HomePla3_1_3.html">EJERCICIO 3</button>
-<button  onclick=location="Pla3parte1/HomePla3_1_4.html">EJERCICIO 4</button>
-<button  onclick=location="Pla3parte1/HomePla3_1_5.html">EJERCICIO 5</button>
-<button  onclick=location="Pla3parte1/HomePla3_1_6.html">EJERCICIO 6</button>
-<button  onclick=location="Pla3parte1/HomePla3_1_7.html">EJERCICIO 7</button>
-<button  onclick=location="Pla3parte1/HomePla3_1_8.html">EJERCICIO 8</button>
-<br>
-<br>
-<br>
-Ejercicios realizados en la segunda parte de la PLA3 
+
+<input onClick=location="Pla3parte1/HomePla3_1_5.html" type="button" value="EJERCICIO 5" name="boton5"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte1/HomePla3_1_6.html" type="button" value="EJERCICIO 6" name="boton6"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte1/HomePla3_1_7.html" type="button" value="EJERCICIO 7" name="boton7"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte1/HomePla3_1_8.html" type="button" value="EJERCICIO 8" name="boton8"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+  
 <br>
 <br>
+
+<h2 style="BORDER: black 2px groove; FONT-SIZE: 15pt; background-color:SlateBlue; COLOR: white">EJERCICIOS PLA-3 2º PARTE</h2>
+<h2 style="BORDER: 4px groove ;background-color: LightGray; COLOR: white"/h2>
+
 <br>
-<button  onclick=location="Pla3parte2/HomePla3_2_1.html">EJERCICIO 1</button>
-<button  onclick=location="Pla3parte2/HomePla3_2_2.html">EJERCICIO 2</button>
-<button  onclick=location="Pla3parte2/HomePla3_2_3.html">EJERCICIO 3</button>
-<button  onclick=location="Pla3parte2/HomePla3_2_5.html">EJERCICIO 4-5</button>
-<button  onclick=location="Pla3parte2/HomePla3_2_6.html">EJERCICIO 6</button>
-<button  onclick=location="Pla3parte2/HomePla3_2_7.html">EJERCICIO 7</button>
-<button  onclick=location="Pla3parte2/HomePla3_2_8.html">EJERCICIO 8</button>
+ 
+<input onClick=location="Pla3parte2/HomePla3_2_1.html" type="button" value="EJERCICIO 1" name="boton2_1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte2/HomePla3_2_2.html" type="button" value="EJERCICIO 2" name="boton2_2"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte2/HomePla3_2_3.html" type="button" value="EJERCICIO 3" name="boton2_3"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte2/HomePla3_2_5.html" type="button" value="EJERCICIO 4-5" name="boton2_4_5"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
 <br>
 <br>
+
+<input onClick=location="Pla3parte2/HomePla3_2_6.html" type="button" value="EJERCICIO 6" name="boton2_6"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte2/HomePla3_2_7.html" type="button" value="EJERCICIO 7" name="boton2_7"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte2/HomePla3_2_8.html" type="button" value="EJERCICIO 8" name="boton2_8"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
 <br>
-Ejercicios realizados en la tercera parte de la PLA3 
+<br>
+<h2 style="BORDER: black 2px groove; FONT-SIZE: 15pt; background-color:SlateBlue; COLOR: white">PRIMEROS EJERCICIOS EN JAVASCRIPT</h2>
+<h2 style="BORDER: 4px groove ;background-color: LightGray; COLOR: white"/h2>
+
+<br>
+
+<input onClick=location="Pla3parte1/HomePla3_3_1.html" type="button" value="EJERCICIO 1" name="boton1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+  
+<input onClick=location="Pla3parte1/HomePla3_3_2.html" type="button" value="EJERCICIO 2" name="boton1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+  
+<input onClick=location="Pla3parte1/HomePla3_3_3.html" type="button" value="EJERCICIO 3" name="boton1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+  
+ <br>
+ <br>
+  
+<input onClick=location="Pla3parte1/HomePla3_3_4.html" type="button" value="EJERCICIO 4" name="boton1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
+<input onClick=location="Pla3parte1/HomePla3_3_5.html" type="button" value="EJERCICIO 5" name="boton1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">      
+
+<input onClick=location="Pla3parte1/HomePla3_3_6.html" type="button" value="EJERCICIO 6" name="boton1"
+  style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
+
 <br>
 <br>
-<br>
-<button  onclick=location="Pla3parte3/HomePla3_3_1.html">EJERCICIO 1</button>
-<button  onclick=location="Pla3parte3/HomePla3_3_2.html">EJERCICIO 2</button>
-<button  onclick=location="Pla3parte3/HomePla3_3_3.html">EJERCICIO 3</button>
-<button  onclick=location="Pla3parte3/HomePla3_3_4.html">EJERCICIO 4</button>
-<button  onclick=location="Pla3parte3/HomePla3_3_5.html">EJERCICIO 5</button>
-<button  onclick=location="Pla3parte3/HomePla3_3_6.html">EJERCICIO 6</button>
 </body>
 </html>
