--- a/Pla3parte1/HomePla3_1_1.html
+++ b/Pla3parte1/HomePla3_1_1.html
@@ -6,7 +6,7 @@
 <title>Home</title>
 </head>
 <body>
-<script>var resultado = busqueda("asfgeysadhffagdsh",0);</script>
+<script>var resultado = busqueda("asfgeysadhffagdsh","a");</script>
  <script>alert(resultado);</script>
 </body>
 </html>
