--- a/Pla3parte1/HomePla3_1_2.html
+++ b/Pla3parte1/HomePla3_1_2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>var letra = prompt("¿Que letras quieres buscar?")</script>
-<script>var resultado = busqueda("asfgeysssadhffagdsh",0,letra);</script>
+<script>var resultado = busqueda("asfgeysssadhffagdsh",letra);</script>
 <script>alert(resultado);</script>
 </body>
 </html>
