--- a/Pla3parte1/HomePla3_1_3.html
+++ b/Pla3parte1/HomePla3_1_3.html
@@ -8,7 +8,7 @@
 <body>
 <script>var cadena = prompt("inserta cadena")</script>
 <script>var letra = prompt("¿Que letras quieres buscar?")</script>
-<script>var resultado = busqueda(cadena,0,letra);</script>
-<script>alert("la cadena "+ cadena +" tiene " + resultado + " "+letra);</script>
+<script>var resultado = busqueda(cadena,letra);</script>
+<script>alert(resultado);</script>
 </body>
 </html>
