--- a/Pla3parte1/HomePla3_1_7.html
+++ b/Pla3parte1/HomePla3_1_7.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p id="posicionLetra"></p>
-<script>var cadena = prompt("inserta cadena con nmumeros del 0 al 9");</script>
+<script>var cadena = prompt("Inserta cadena con numeros del 0 al 9");</script>
 <script>var resultado = busqueda(cadena);</script>
 <script>document.getElementById("posicionLetra").innerHTML = resultado;</script>
 </body>
