--- a/Pla3parte1/HomePla3_1_4.html
+++ b/Pla3parte1/HomePla3_1_4.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>var cadena = prompt("inserta cadena")</script>
-<script>var resultado = busqueda(cadena,0,"a");</script>
-<script>alert("la cadena "+ cadena +" tiene la letra a en la posicion "+resultado);</script>
+<script>var resultado = busqueda(cadena,"a");</script>
+<script>alert(resultado);</script>
 </body>
 </html>
