--- a/Pla3parte2/HomePla3_2_1.html
+++ b/Pla3parte2/HomePla3_2_1.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<script type="text/javascript" src="Pla3parte1/ejercicioPla3_2_1.js"></script>
+<script type="text/javascript" src="ejercicioPla3_2_1.js"></script>
 <title>Home</title>
 </head>
 <body>
 <script>var numero = prompt("inserta numero a comparar");</script>
-<script>var resultado = busqueda("1643956738",numero);</script>
+<script>var resultado = busqueda("0123456778899",numero);</script>
 <script>alert(resultado);</script>
 </body>
 </html>
