--- a/Pla3parte3/HomePla3_3_2.html
+++ b/Pla3parte3/HomePla3_3_2.html
@@ -6,6 +6,6 @@
 <title>Home</title>
 </head>
 <body>
-<script>var resultado = valores(numeros)</script>
+<script>var resultado = sumaDiezNumeros("1234567890")</script>
 </body>
 </html>
