Actualizacion v2.0 - mejora entorno grafico -añadir mas comentarios a los acrchivos

--- a/HomeMenu.html
+++ b/HomeMenu.html
@@ -2,15 +2,29 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>MENU PLA3 V2.0</title>
 </head>
 <body>
 
 <br>
 
+<!-- <body background="FONDO SC_3.png">-->
+<table width="565" bgcolor=E5F1F4  border=3 align=left> 
+<tr> 
+   	<td> 
 
-<h2 style=" BORDER: black 2px groove; FONT-SIZE: 15pt;background-color:SlateBlue; COLOR: white">EJERCICIOS PLA-3 1º PARTE</h2>
-<h2 style="BORDER: 4px groove ;background-color: LightGray; background-size: 50px 50px; COLOR: white"/h2>
+   	<h1 style="color:000000"; ><U>MENU DE EJERCICIOS PLA3</U></h1> 
+   	<br> 
+    <h5style="rgb(70, 130, 180)";>Autor:<b> Juan José González Pozo</b></h5>
+    <br> 
+         Emal: juan.gonzalez.cifo@gmail.com
+   	<br> 
+   	    Formador: <b>Marc Farssac</b>
+    <br> Pla de Qualificació en Tecnologia Mobic <b>PQTM</b> Centro <b>La Violeta</b>
+
+
+<h2 style=" BORDER: black 2px groove; FONT-SIZE: 15pt;background-color: rgb(119, 136, 153); COLOR: white">EJERCICIOS PLA-3 1º PARTE</h2>
+<h2 style="BORDER: 4px groove ;background-color: WHITE; background-size: 50px 50px; COLOR: white"/h2>
 
 <br>
 
@@ -44,8 +58,8 @@
 <br>
 <br>
 
-<h2 style="BORDER: black 2px groove; FONT-SIZE: 15pt; background-color:SlateBlue; COLOR: white">EJERCICIOS PLA-3 2º PARTE</h2>
-<h2 style="BORDER: 4px groove ;background-color: LightGray; COLOR: white"/h2>
+<h2 style="BORDER: black 2px groove; FONT-SIZE: 15pt; background-color: rgb(119, 136, 153); COLOR: white">EJERCICIOS PLA-3 2º PARTE</h2>
+<h2 style="BORDER: 4px groove ;background-color: WHITE; COLOR: white"/h2>
 
 <br>
  
@@ -75,8 +89,8 @@
 
 <br>
 <br>
-<h2 style="BORDER: black 2px groove; FONT-SIZE: 15pt; background-color:SlateBlue; COLOR: white">PRIMEROS EJERCICIOS EN JAVASCRIPT</h2>
-<h2 style="BORDER: 4px groove ;background-color: LightGray; COLOR: white"/h2>
+<h2 style="BORDER: black 2px groove; FONT-SIZE: 15pt; background-color: rgb(119, 136, 153); COLOR: white">PRIMEROS EJERCICIOS EN JAVASCRIPT</h2>
+<h2 style="BORDER: 4px groove ;background-color: 	WHITE; COLOR: white"/h2>
 
 <br>
 
@@ -102,6 +116,10 @@
   style="BORDER: rgb(157,162,191) 1px groove ; FONT-SIZE: 13pt; FONT-FAMILY: Verdana; BACKGROUND-COLOR: rgb(240, 240, 240)">
 
 <br>
+
 <br>
+</td> 
+</tr> 
+</table>
 </body>
 </html>
