--- a/Pla3parte1/HomePla3_1_1.html
+++ b/Pla3parte1/HomePla3_1_1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_1_1.js"></script>
-<title>Home</title>
+<title>Pla3_1_1</title>
 </head>
 <body>
 <script>var resultado = busqueda("asfgeysadhffagdsh","a");</script>
