--- a/Pla3parte1/HomePla3_1_2.html
+++ b/Pla3parte1/HomePla3_1_2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_1_2.js"></script>
-<title>Home</title>
+<title>Pla3_1_2</title>
 </head>
 <body>
 <script>var letra = prompt("¿Que letras quieres buscar?")</script>
