--- a/Pla3parte2/HomePla3_2_5.html
+++ b/Pla3parte2/HomePla3_2_5.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_2_5.js"></script>
-<title>Home</title>
+<title>Pla3_2_4/5</title>
 </head>
 <body>
 <p id="tabla"></p>
