--- a/Pla3parte3/HomePla3_3_2.html
+++ b/Pla3parte3/HomePla3_3_2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_3_2.js"></script>
-<title>Home</title>
+<title>Pla3_3_2</title>
 </head>
 <body>
 <script>var resultado = sumaDiezNumeros("1234567890")</script>
