--- a/Pla3parte3/HomePla3_3_5.html
+++ b/Pla3parte3/HomePla3_3_5.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_3_5.js"></script>
-<title>Home</title>
+<title>Pla3_3_5</title>
 </head>
 <body>
 <script>var cadena=prompt("inserta cadena de A´s Y B´s: ")</script>
