--- a/Pla3parte3/HomePla3_3_6.html
+++ b/Pla3parte3/HomePla3_3_6.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_3_6.js"></script>
-
-<title>Home</title>
+<title>Pla3_3_5</title>
 </head>
 <body>
 <p id="funcionesConjuntas"></p>
