--- a/Pla3parte1/HomePla3_1_3.html
+++ b/Pla3parte1/HomePla3_1_3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_1_3.js"></script>
-<title>Home</title>
+<title>Pla3_1_3</title>
 </head>
 <body>
 <script>var cadena = prompt("inserta cadena")</script>
