--- a/Pla3parte1/HomePla3_1_8.html
+++ b/Pla3parte1/HomePla3_1_8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_1_8.js"></script>
-<title>Home</title>
+<title>Pla3_1_8</title>
 </head>
 <body>
 <p id="posicionLetra"></p>
