--- a/Pla3parte2/HomePla3_2_8.html
+++ b/Pla3parte2/HomePla3_2_8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script type="text/javascript" src="ejercicioPla3_2_8.js"></script>
-<title>Home</title>
+<title>Pla3_2_8</title>
 </head>
 <body>
 
