--- a/HomeMenu.html
+++ b/HomeMenu.html
@@ -5,14 +5,12 @@
 <title>MENU PLA3 V2.0</title>
 </head>
 <body>
-
+<!-- Actualizado entorno grafico v2.0--> 
 <br>
 
-<!-- <body background="FONDO SC_3.png">-->
-<table width="565" bgcolor=E5F1F4  border=3 align=left> 
-<tr> 
-   	<td> 
-
+<table width="100%" bgcolor=E5F1F4  border=3 align=left> 
+<tr>
+   <td>
    	<h1 style="color:000000"; ><U>MENU DE EJERCICIOS PLA3</U></h1> 
    	<br> 
     <h5style="rgb(70, 130, 180)";>Autor:<b> Juan José González Pozo</b></h5>
@@ -118,8 +116,39 @@
 <br>
 
 <br>
-</td> 
+</td> <td>
+<h1><b><u>Descripción de los ejercicios</u></b></h1>
+<h3><u>PLA3 1ª parte</u></h3>
+<br>
+Ejerccio 1: Cuenta la cantidad de A´s que hay en una cadena de texto.<br>
+Ejerccio 2: Cuenta la cantidad de veces que se repite una letra, que el usuario puede escoger, en una cadena de texto.<br>
+Ejercico 3: Cuenta la cantidad de veces que se repite una letra done el usuario puede escoger la letra y la cadena de texto<br>
+Ejercico 4: En este ejercicio se pretende saber en qué posición se encuentra la primera letra "a" dentro de una cadena<br>
+Ejercico 5: En que posición se encuentra la primera letra "a" dentro de una cadena, con opción a que el usuario inserte la cadena.<br>
+Ejercico 6: Aquí tratamos de saber en qué posiciones se repite una letra de una cadena fija y guardarlas en una tabla.<br>
+Ejercico 7: Dada una cadena de números que inserta el usuario, contar la cantidad de veces que se repiten los numero e ingresarlos en una tabla.<br>
+Ejercico 8: En una cadena con letras deseamos detectar si hay algún número y en que posición se encuentra.<br>
+<br>
+<h3><b><u>PLA3 2ª parte</u></b><br><br></h3>
+Ejercicio 1: De una cadena fija cuenta los números mayores que el introducido por el usuario<br>
+Ejercicio 2: En una cadena donde hay A´s y B´s sumar cuantas hay de cada y poner las en una tabla<br>
+Ejercicio 3: Añadir en cinco tablas con un vector de 5x5 donde nos de la suma de su diagonal<br>
+Ejercicio 4-5: Este ejercicio es similar al anterior, pero en vez de usar 5 listas usaremos una donde estén los 25 elementos del vector 5 por 5.<br>
+Ejercicio 6: Este ejercicio tendrá la misma funcionalidad que el anterior, con la diferencia de que el usuario podrá determinar de cuanto quiere que sea el vector y que en vez de usar varias tablas <br>usaremos una matriz.<br>
+Ejercicio 7: Usando la matriz de ejercicio anterior, hay que indicar que números por encima de la diagonal, son mayore, menores o iguales a cero<br>
+Ejercicio 8: Dada una matriz de tamaño a elegir por el usuario, hacer la media aritmética de cada fila e introducir los datos en un vector<br>
+<br>
+<h3><b><u>Primeros ejercicios en Javascript</b></u><br></h3>
+Ejercicio 1. Crea una función para cada operador lógico (suma, resta, multiplicación y división) con 3 y 15.<br>
+Ejercicio 2: Suma los números entre si de una cadena enviada con la función SumaDiezNumeros<br>
+Ejercicio 3: Calcula la media aritmética de una cadena de 1 a la n donde este es un parámetro de la función<br><br>
+Ejercicio 4: Dada una cadena del 0 al 9 que pondremos dentro de una función, cuenta los números más grandes que el valor ingresado por el usuario, y en el caso que el resultado sea mayor que la mitad <br>de la cadena mas uno, devuelve el valor 1 si no 0<br>
+Ejercicio 5: Dada una cadena con A´s B´s C´s... dentro de una función, devuelve la cantidad de letras repetidas con el siguiente formato A=1, B=2, C=2,...<br>
+Ejercicio 6: En un mismo mensaje retorna los valores del ejercicio 3 y 5Con este ejercicio se pretende unificar dos funciones llamadas por un mismo código<br>
+
+</td>
 </tr> 
+
 </table>
 </body>
 </html>
