--- a/HomeMenu.html
+++ b/HomeMenu.html
@@ -15,10 +15,10 @@
    	<br> 
     <h5style="rgb(70, 130, 180)";>Autor:<b> Juan José González Pozo</b></h5>
     <br> 
-         Emal: juan.gonzalez.cifo@gmail.com
+         E-mail: juan.gonzalez.cifo@gmail.com
    	<br> 
    	    Formador: <b>Marc Farssac</b>
-    <br> Pla de Qualificació en Tecnologia Mobic <b>PQTM</b> Centro <b>La Violeta</b>
+    <br> Pla de Qualificació en Tecnologia Mobil <b>PQTM</b> Centro <b>La Violeta</b>
 
 
 <h2 style=" BORDER: black 2px groove; FONT-SIZE: 15pt;background-color: rgb(119, 136, 153); COLOR: white">EJERCICIOS PLA-3 1º PARTE</h2>
