Correccion en comentarios

--- a/HomeMenu.html
+++ b/HomeMenu.html
@@ -18,7 +18,7 @@
          E-mail: juan.gonzalez.cifo@gmail.com
    	<br> 
    	    Formador: <b>Marc Farssac</b>
-    <br> Pla de Qualificació en Tecnologia Mobil <b>PQTM</b> Centro <b>La Violeta</b>
+    <br> Pla de Qualificació en Tecnologia Mobil <b>PQTM</b> Centro <b>CIFO La Violeta</b>
 
 
 <h2 style=" BORDER: black 2px groove; FONT-SIZE: 15pt;background-color: rgb(119, 136, 153); COLOR: white">EJERCICIOS PLA-3 1º PARTE</h2>
