Quitar acentos ya que salen mal desde google chrome

--- a/Pla3parte2/HomePla3_2_7.html
+++ b/Pla3parte2/HomePla3_2_7.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<script> var numero = prompt("Ingresa de cuanto quieres la matriz")</script>
+<script> var numero = prompt("Ingresa de cuanto quieres la matriz (1-100)")</script>
 <script>var resultado = busqueda(numero);</script>
 
 </body>
